Redesign backend sync architecture
